[tool.poetry]
name = "ons"
version = "0.2.0"
description = "UK Office for National Statistics (ONS) API Python interface"
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^2.0.0"
importlib-metadata = "^5.0.0"
lxml = "^4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
